为每个连接分配当前最小闲置的nodeID

--- a/src/makefile
+++ b/src/makefile
@@ -1,7 +1,7 @@
 ALL:CMDserver CMDclient TCPclient
 
 CMDserver:server.cc CMDserver.cc CMDserver.h
-	-g++ $^ -o ./build/$@ -lmuduo_net -lmuduo_base -lpthread -std=c++11
+	-g++ $^ -o ./build/$@ -lmuduo_net -lmuduo_base -lpthread -std=c++11 -g
 
 %:%.cc
-	-g++ $^ -o ./build/$@ -lmuduo_net -lmuduo_base -lpthread -std=c++11
+	-g++ $^ -o ./build/$@ -lmuduo_net -lmuduo_base -lpthread -std=c++11 -g
