fix something important

--- a/lkp-extent.config
+++ b/lkp-extent.config
@@ -10,9 +10,9 @@ ServerThreadsNum = 4
 # When timeout, the client will be unconnected
 ServerTimeControl = 10
 ServerflushInterval = 3
-# In fact, $ROOT_DIR/testcase
+# In fact, $ROOT_DIR/testcases
 ServerPushPath = testcases
-# In fact, $ROOT_DIR/testcase
+# In fact, $ROOT_DIR/results
 ServerResultPath = results
 
 # for Client Use
