fix unconnect problem & complete shell

--- a/lkp-extent.config
+++ b/lkp-extent.config
@@ -1,9 +1,6 @@
 # This is a comment
 # Configure the parameters of lkp-extent here.
 
-# 1: Server; 2: Client
-ServerNClient = 1
-
 # for Server Use
 ServerListenPort = 7777
 ServerThreadsNum = 4
@@ -16,10 +13,11 @@ ServerPushPath = testcases
 ServerResultPath = results
 
 # for Client Use
-ServerAddress = 114.212.125.145
+ServerAddress = 172.28.158.128
 ServerPort = 7777
 HeartBeatTime = 5
-ClientPushPath = lkp-tests/jobs
+# In fact, $ROOT_DIR/testcases
+ClientPushPath = testcases
 
 
 
