add docker support

--- a/etc/dockerfile/Dockerfile
+++ b/etc/dockerfile/Dockerfile
@@ -1,3 +1,6 @@
-FROM centos:8
-MAINTAINER kaicliu
-
+FROM ubuntu:18.04
+MAINTAINER wjz
+RUN apt-get update \
+    && apt-get -y install bc debianutils gawk gzip kmod numactl rsync time automake bison build-essential bzip2 ca-certificates cpio fakeroot flex gcc git libarchive-tools libc6-dev libc6-dev-x32 libipc-run-perl libklibc-dev libssl-dev libtool linux-libc-dev linux-tools-common make openssl patch rsync ruby ruby-dev wget \
+    && apt-get -y install linux-tools-generic linux-cloud-tools-generic
+    
